--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&family=Oi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="project.html">Project</a>
+        </nav>
+    </header>
+    <main>
+        <section class="intro">
+            <img src="https://i.pinimg.com/736x/f1/06/5c/f1065c0581c61e114fe415a6b0d6bb08.jpg">
+            <div class="text">
+                <span class="hi">Hi !</span>
+                <span class="im">I'm</span>
+            </div>
+        </section>
+        <h1>Irdina Nur Azizah</h1>
+    </main>
+</body>
+
+</html>
