--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Konkhmer+Sleokchher&family=Oi&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Hubballi&display=swap" rel="stylesheet">
@@ -16,20 +16,40 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="project.html">Project</a>
-        </nav>
+        <a href="index.html">Home</a>
+        <a href="projects.html">Project</a>
+        <a href="info.html">Useful information</a>
+      </nav>
     </header>
     <main>
         <section class="intro">
             <img src="https://i.pinimg.com/736x/f1/06/5c/f1065c0581c61e114fe415a6b0d6bb08.jpg">
             <div class="text">
-                <span class="hi">Hi !</span>
+                <span class="hi">HI !</span>
                 <span class="im">I'm</span>
             </div>
         </section>
         <h1>Irdina Nur Azizah</h1>
+        <div class="learn">
+            <h1>This is me and what I've learned so far</h1>
+            <section class="subjects">
+                <article class="subject">
+                <p>WIX</p>
+                <p>Wix is an online platform that offers a series of tools for creating professional websites in a quick and easy way</p></article>
+                <article class="subject">
+                <p>HTML & CSS</p>
+                <p>HTML and CSS are the foundation of the internet, defining the structure and presentation of web pages, respectively</p></article>
+                <article class="subject">
+                <p>FIGMA</p>
+                <p> cloud-based design tool used for creating digital experiences, including websites, mobile apps</p></article>
+            </section>
+        </div>
     </main>
+    
+
+    <footer>
+      <a href="https://github.com/Dynaa1782" target="_blank">My Github</a>
+    </footer>
 </body>
 
 </html>
